@@ -97,11 +97,11 @@ public class RestoreCasesService {
 
         // Filter to only digital cases - this is to prevent known problems adding to the queue
         // for non-digital cases that will feedback irrelevant errors
-        List<SscsCaseDetails> filteredMatchedCases = matchedCases.stream().filter(this::isDigitalCase).collect(Collectors.toList());
+        List<SscsCaseDetails> filteredMatchedCases = matchedCases.stream().filter(this::isDigitalCase).toList();
         if (filteredMatchedCases.size() < matchedCases.size()) {
             Set<Long> matchedIds = matchedCases.stream().map(SscsCaseDetails::getId).collect(Collectors.toSet());
             Set<Long> filteredMatchedIds = filteredMatchedCases.stream().map(SscsCaseDetails::getId).collect(Collectors.toSet());
-            List<Long> skippedIds = matchedIds.stream().filter(id -> !filteredMatchedIds.contains(id)).collect(Collectors.toList());
+            List<Long> skippedIds = matchedIds.stream().filter(id -> !filteredMatchedIds.contains(id)).toList();
             log.warn("Some cases were returned by the query which are non-digital - skipping the following ids {}", skippedIds);
         }
 
